Add basic HTML and CSS Grid properties

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <div class="page-container">
+        <div class="header">
+            hey
+        </div>
+        <div class="sidebar">
+            howdy
+        </div>
+        <div class="main-content">
+            hello
+        </div>
+    </div>
 </body>
 </html>
