Add header HTML

--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 <body>
     <div class="page-container">
         <div class="header">
-            hey
+            <div class="search-container">
+                <img src="" alt="icon">
+                <input type="search" class="search-bar">
+            </div>
+            <div class="user-info">
+                <img src="" alt="icon">
+                <img src="" alt="img">
+                <div>mister userman</div>
+            </div>
+            <div class="greeting">
+                <img src="" alt="img">
+                <div>howdy</div>
+                <div>mister userman (@mruserman)</div>
+            </div>
+            <div class="head-buttons">
+                <button type="button">new</button>
+                <button type="button">upload</button>
+                <button type="button">share</button>
+            </div>
         </div>
         <div class="sidebar">
             howdy
