Add sidebar HTML and basic CSS

--- a/index.html
+++ b/index.html
@@ -31,7 +31,50 @@
             </div>
         </div>
         <div class="sidebar">
-            howdy
+            <div class="sidebar-logo">
+                <img src="" alt="img">
+                <div>dashboard</div>
+            </div>
+            <div class="primary-nav">
+                <div class="nav-item">
+                    <img src="" alt="img">
+                    <div>home</div>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="img">
+                    <div>profile</div>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="img">
+                    <div>messages</div>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="img">
+                    <div>history</div>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="img">
+                    <div>tasks</div>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="img">
+                    <div>communities</div>
+                </div>
+            </div>
+            <div class="secondary-nav">
+                <div class="nav-item">
+                    <img src="" alt="img">
+                    <div>settings</div>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="img">
+                    <div>support</div>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="img">
+                    <div>privacy</div>
+                </div>
+            </div>
         </div>
         <div class="main-content">
             hello
