Add main content HTML and basic CSS

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             </div>
             <div class="greeting">
                 <img src="" alt="img">
-                <div>howdy</div>
-                <div>mister userman (@mruserman)</div>
+                <div class="greeting-text">
+                    <div>howdy</div>
+                    <div>mister userman (@mruserman)</div>
+                </div>
             </div>
             <div class="head-buttons">
                 <button type="button">new</button>
@@ -77,7 +79,34 @@
             </div>
         </div>
         <div class="main-content">
-            hello
+            <div class="project-container">
+                <div class="project-header">your projects</div>
+                <div class="project-main">
+                    <div class="project-item">1</div>
+                    <div class="project-item">2</div>
+                    <div class="project-item">3</div>
+                    <div class="project-item">4</div>
+                    <div class="project-item">5</div>
+                    <div class="project-item">6</div>
+                </div>
+            </div>
+            <div class="announce-container">
+                <div class="announce-header">announcements</div>
+                <div class="announce-main">
+                    <div>a</div>
+                    <div>b</div>
+                    <div>c</div>
+                </div>
+            </div>
+            <div class="trend-container">
+                <div class="trend-header">trending</div>
+                <div class="trend-main">
+                    <div>1a</div>
+                    <div>2a</div>
+                    <div>3a</div>
+                    <div>4a</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
