Add CSS to search bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page-container">
         <div class="header">
             <div class="search-container">
-                <img src="" alt="icon">
+                <img src="icons/search.svg" alt="Magnifying glass search icon">
                 <input type="search" class="search-bar">
             </div>
             <div class="user-info">
