Add CSS to user info and update font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <title>Admin Dashboard</title>
 </head>
 <body>
@@ -15,9 +18,9 @@
                 <input type="search" class="search-bar">
             </div>
             <div class="user-info">
-                <img src="" alt="icon">
-                <img src="" alt="img">
-                <div>mister userman</div>
+                <img src="icons/bell.svg" alt="Bell notification icon" class="notif-icon">
+                <img src="icons/user.svg" alt="Default user icon" class="info-user-icon">
+                <div>Mister Userman</div>
             </div>
             <div class="greeting">
                 <img src="" alt="img">
