Add CSS to header greeting

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <div>Mister Userman</div>
             </div>
             <div class="greeting">
-                <img src="" alt="img">
+                <img src="icons/user.svg" alt="Default user icon" class="greeting-user-icon">
                 <div class="greeting-text">
-                    <div>howdy</div>
-                    <div>mister userman (@mruserman)</div>
+                    <div class="hello-div">Howdy,</div>
+                    <div class="username-greet-div">Mister Userman (@mr_userman)</div>
                 </div>
             </div>
             <div class="head-buttons">
