Add CSS to header nav

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
             </div>
             <div class="head-buttons">
-                <button type="button">new</button>
-                <button type="button">upload</button>
-                <button type="button">share</button>
+                <button type="button">New</button>
+                <button type="button">Upload</button>
+                <button type="button">Share</button>
             </div>
         </div>
         <div class="sidebar">
