Add sidebar CSS

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <div class="page-container">
         <div class="header">
             <div class="search-container">
-                <img src="icons/search.svg" alt="Magnifying glass search icon">
+                <img src="icons/search.svg" alt="Search icon">
                 <input type="search" class="search-bar">
             </div>
             <div class="user-info">
-                <img src="icons/bell.svg" alt="Bell notification icon" class="notif-icon">
-                <img src="icons/user.svg" alt="Default user icon" class="info-user-icon">
+                <img src="icons/bell.svg" alt="Notification icon" class="notif-icon">
+                <img src="icons/user.svg" alt="User icon" class="info-user-icon">
                 <div>Mister Userman</div>
             </div>
             <div class="greeting">
-                <img src="icons/user.svg" alt="Default user icon" class="greeting-user-icon">
+                <img src="icons/user.svg" alt="User icon" class="greeting-user-icon">
                 <div class="greeting-text">
                     <div class="hello-div">Howdy,</div>
                     <div class="username-greet-div">Mister Userman (@mr_userman)</div>
@@ -37,47 +37,47 @@
         </div>
         <div class="sidebar">
             <div class="sidebar-logo">
-                <img src="" alt="img">
-                <div>dashboard</div>
+                <img src="icons/dashboard.svg" alt="Dashboard icon">
+                <div>Dashboard</div>
             </div>
             <div class="primary-nav">
                 <div class="nav-item">
-                    <img src="" alt="img">
-                    <div>home</div>
+                    <img src="icons/home.svg" alt="Home icon">
+                    <div>Home</div>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="img">
-                    <div>profile</div>
+                    <img src="icons/profile.svg" alt="User profile icon">
+                    <div>Profile</div>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="img">
-                    <div>messages</div>
+                    <img src="icons/message.svg" alt="Messages icon">
+                    <div>Messages</div>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="img">
-                    <div>history</div>
+                    <img src="icons/history.svg" alt="History icon">
+                    <div>History</div>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="img">
-                    <div>tasks</div>
+                    <img src="icons/tasks.svg" alt="Tasks icon">
+                    <div>Tasks</div>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="img">
-                    <div>communities</div>
+                    <img src="icons/communities.svg" alt="Communities icon">
+                    <div>Communities</div>
                 </div>
             </div>
             <div class="secondary-nav">
                 <div class="nav-item">
-                    <img src="" alt="img">
-                    <div>settings</div>
+                    <img src="icons/settings.svg" alt="Settings icon">
+                    <div>Settings</div>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="img">
-                    <div>support</div>
+                    <img src="icons/support.svg" alt="Support icon">
+                    <div>Support</div>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="img">
-                    <div>privacy</div>
+                    <img src="icons/privacy.svg" alt="Privacy icon">
+                    <div>Privacy</div>
                 </div>
             </div>
         </div>
