--- a/index.html
+++ b/index.html
@@ -83,9 +83,19 @@
         </div>
         <div class="main-content">
             <div class="project-container">
-                <div class="project-header">your projects</div>
+                <div class="project-header">Your Projects</div>
                 <div class="project-main">
-                    <div class="project-item">1</div>
+                    <div class="project-item">
+                        <div class="project-header">Project 1</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
+                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-links">
+                            <img src="icons/favorite.svg" alt="Favorite icon">
+                            <img src="icons/bookmark.svg" alt="Bookmark icon">
+                            <img src="icons/link.svg" alt="Link icon">
+                        </div>
+                    </div>
                     <div class="project-item">2</div>
                     <div class="project-item">3</div>
                     <div class="project-item">4</div>
@@ -94,7 +104,7 @@
                 </div>
             </div>
             <div class="announce-container">
-                <div class="announce-header">announcements</div>
+                <div class="announce-header">Announcements</div>
                 <div class="announce-main">
                     <div>a</div>
                     <div>b</div>
@@ -102,7 +112,7 @@
                 </div>
             </div>
             <div class="trend-container">
-                <div class="trend-header">trending</div>
+                <div class="trend-header">Trending</div>
                 <div class="trend-main">
                     <div>1a</div>
                     <div>2a</div>
