Add dummy content to project tabs

--- a/index.html
+++ b/index.html
@@ -96,11 +96,61 @@
                             <img src="icons/link.svg" alt="Link icon">
                         </div>
                     </div>
-                    <div class="project-item">2</div>
-                    <div class="project-item">3</div>
-                    <div class="project-item">4</div>
-                    <div class="project-item">5</div>
-                    <div class="project-item">6</div>
+                    <div class="project-item">
+                        <div class="project-header">Project 2</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
+                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-links">
+                            <img src="icons/favorite.svg" alt="Favorite icon">
+                            <img src="icons/bookmark.svg" alt="Bookmark icon">
+                            <img src="icons/link.svg" alt="Link icon">
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <div class="project-header">Project 3</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
+                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-links">
+                            <img src="icons/favorite.svg" alt="Favorite icon">
+                            <img src="icons/bookmark.svg" alt="Bookmark icon">
+                            <img src="icons/link.svg" alt="Link icon">
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <div class="project-header">Project 4</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
+                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-links">
+                            <img src="icons/favorite.svg" alt="Favorite icon">
+                            <img src="icons/bookmark.svg" alt="Bookmark icon">
+                            <img src="icons/link.svg" alt="Link icon">
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <div class="project-header">Project 5</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
+                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-links">
+                            <img src="icons/favorite.svg" alt="Favorite icon">
+                            <img src="icons/bookmark.svg" alt="Bookmark icon">
+                            <img src="icons/link.svg" alt="Link icon">
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <div class="project-header">Project 6</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
+                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-links">
+                            <img src="icons/favorite.svg" alt="Favorite icon">
+                            <img src="icons/bookmark.svg" alt="Bookmark icon">
+                            <img src="icons/link.svg" alt="Link icon">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="announce-container">
