Add announcement content

--- a/index.html
+++ b/index.html
@@ -156,9 +156,24 @@
             <div class="announce-container">
                 <div class="announce-header">Announcements</div>
                 <div class="announce-main">
-                    <div>a</div>
-                    <div>b</div>
-                    <div>c</div>
+                    <div class="announce-item">
+                        <div class="announce-title">Announcement 1</div>
+                        <div class="announce-text">Donec at nunc elit. Aliquam hendrerit
+                             varius ipsum quis placerat. Duis ut ligula fringilla, 
+                             volutpat metus eget, pharetra magna.</div>
+                    </div>
+                    <div class="announce-item-middle">
+                        <div class="announce-title">Announcement 2</div>
+                        <div class="announce-text">Donec at nunc elit. Aliquam hendrerit
+                            varius ipsum quis placerat. Duis ut ligula fringilla, 
+                            volutpat metus eget, pharetra magna.</div>
+                    </div>
+                    <div class="announce-item">
+                        <div class="announce-title">Announcement 3</div>
+                        <div class="announce-text">Donec at nunc elit. Aliquam hendrerit
+                            varius ipsum quis placerat. Duis ut ligula fringilla, 
+                            volutpat metus eget, pharetra magna.</div>
+                    </div>
                 </div>
             </div>
             <div class="trend-container">
