Add trending content

--- a/index.html
+++ b/index.html
@@ -179,10 +179,34 @@
             <div class="trend-container">
                 <div class="trend-header">Trending</div>
                 <div class="trend-main">
-                    <div>1a</div>
-                    <div>2a</div>
-                    <div>3a</div>
-                    <div>4a</div>
+                    <div class="trend-item">
+                        <img src="icons/user.svg" alt="User icon" class="trend-icon">
+                        <div class="trend-text">
+                            <div class="trend-user">@coolguy</div>
+                            <div class="trend-user-bio">User bio 1</div>
+                        </div>
+                    </div>
+                    <div class="trend-item">
+                        <img src="icons/user.svg" alt="User icon" class="trend-icon">
+                        <div class="trend-text">
+                            <div class="trend-user">@coolerguy</div>
+                            <div class="trend-user-bio">User bio 2</div>
+                        </div>
+                    </div>
+                    <div class="trend-item">
+                        <img src="icons/user.svg" alt="User icon" class="trend-icon">
+                        <div class="trend-text">
+                            <div class="trend-user">@coolestguy</div>
+                            <div class="trend-user-bio">User bio 3</div>
+                        </div>
+                    </div>
+                    <div class="trend-item">
+                        <img src="icons/user.svg" alt="User icon" class="trend-icon">
+                        <div class="trend-text">
+                            <div class="trend-user">@coolerestguy</div>
+                            <div class="trend-user-bio">User bio 4</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
