Edit main content padding

--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@
         </div>
         <div class="main-content">
             <div class="project-container">
-                <div class="project-header">Your Projects</div>
+                <div class="main-header">Your Projects</div>
                 <div class="project-main">
                     <div class="project-item">
                         <div class="project-header">Project 1</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
-                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
+                             adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
+                              enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
+                               at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -98,9 +99,10 @@
                     </div>
                     <div class="project-item">
                         <div class="project-header">Project 2</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
-                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
+                             enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
+                              at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -109,9 +111,10 @@
                     </div>
                     <div class="project-item">
                         <div class="project-header">Project 3</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
-                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
+                             enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
+                              at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -120,9 +123,10 @@
                     </div>
                     <div class="project-item">
                         <div class="project-header">Project 4</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
-                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
+                             enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
+                              at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -131,9 +135,10 @@
                     </div>
                     <div class="project-item">
                         <div class="project-header">Project 5</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
-                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
+                             enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
+                              at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -142,9 +147,10 @@
                     </div>
                     <div class="project-item">
                         <div class="project-header">Project 6</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Sed vitae vulputate velit. Suspendisse odio enim, efficitur 
-                            ac aliquet eu, porta pharetra lacus.</div>
+                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
+                             enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
+                              at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -154,7 +160,7 @@
                 </div>
             </div>
             <div class="announce-container">
-                <div class="announce-header">Announcements</div>
+                <div class="main-header">Announcements</div>
                 <div class="announce-main">
                     <div class="announce-item">
                         <div class="announce-title">Announcement 1</div>
@@ -177,7 +183,7 @@
                 </div>
             </div>
             <div class="trend-container">
-                <div class="trend-header">Trending</div>
+                <div class="main-header">Trending</div>
                 <div class="trend-main">
                     <div class="trend-item">
                         <img src="icons/user.svg" alt="User icon" class="trend-icon">
