--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
     <title>Admin Dashboard</title>
 </head>
 <body>
@@ -163,19 +163,19 @@
                 <div class="main-header">Announcements</div>
                 <div class="announce-main">
                     <div class="announce-item">
-                        <div class="announce-title">Announcement 1</div>
+                        <div class="announce-header">Announcement 1</div>
                         <div class="announce-text">Donec at nunc elit. Aliquam hendrerit
                              varius ipsum quis placerat. Duis ut ligula fringilla, 
                              volutpat metus eget, pharetra magna.</div>
                     </div>
                     <div class="announce-item-middle">
-                        <div class="announce-title">Announcement 2</div>
+                        <div class="announce-header">Announcement 2</div>
                         <div class="announce-text">Donec at nunc elit. Aliquam hendrerit
                             varius ipsum quis placerat. Duis ut ligula fringilla, 
                             volutpat metus eget, pharetra magna.</div>
                     </div>
                     <div class="announce-item">
-                        <div class="announce-title">Announcement 3</div>
+                        <div class="announce-header">Announcement 3</div>
                         <div class="announce-text">Donec at nunc elit. Aliquam hendrerit
                             varius ipsum quis placerat. Duis ut ligula fringilla, 
                             volutpat metus eget, pharetra magna.</div>
