Fix project item grids and headers

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="main-header">Your Projects</div>
                 <div class="project-main">
                     <div class="project-item">
-                        <div class="project-header">Project 1</div>
+                        <div class="project-header">Life-altering Project</div>
                         <div class="project-text">Lorem ipsum dolor sit amet, consectetur
                              adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
                               enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
@@ -98,11 +98,12 @@
                         </div>
                     </div>
                     <div class="project-item">
-                        <div class="project-header">Project 2</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
-                             enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
-                              at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
+                        <div class="project-header">Wet n' Wild Project</div>
+                        <div class="project-text">Duis ut ligula fringilla, volutpat metus
+                             eget, pharetra magna. Quisque est justo, pulvinar pretium
+                              tortor non, malesuada ornare felis. Sed ultricies et erat
+                               nec semper. Cras eget iaculis ante. Nunc congue quam eu
+                                molestie scelerisque. Donec ultricies molestie consequat.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -110,11 +111,11 @@
                         </div>
                     </div>
                     <div class="project-item">
-                        <div class="project-header">Project 3</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
-                             enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
-                              at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
+                        <div class="project-header">Safe Project</div>
+                        <div class="project-text">Morbi sit amet sem eget magna tincidunt
+                             sagittis nec quis nulla. Vivamus faucibus dapibus ex, sit
+                              amet eleifend dui porta a. Nunc sit amet eros ullamcorper,
+                               volutpat metus et, elementum sem. Fusce eu sodales metus.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -122,11 +123,11 @@
                         </div>
                     </div>
                     <div class="project-item">
-                        <div class="project-header">Project 4</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
-                             enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
-                              at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
+                        <div class="project-header">Chill Project</div>
+                        <div class="project-text">Suspendisse tempus enim ante, id
+                             ullamcorper mauris iaculis ut. Nulla tincidunt libero sed
+                              nunc mollis mattis. Fusce interdum condimentum purus, ac
+                               convallis neque cursus eu. Nulla sit amet eleifend orci.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -134,11 +135,11 @@
                         </div>
                     </div>
                     <div class="project-item">
-                        <div class="project-header">Project 5</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
-                             enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
-                              at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
+                        <div class="project-header">The Project to End All Projects</div>
+                        <div class="project-text">Morbi congue blandit ligula, 
+                            ut porta ipsum tempus vel. Suspendisse venenatis hendrerit
+                             lacus, feugiat condimentum magna ultricies a. Praesent
+                              imperdiet ligula quis tortor euismod vulputate.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -146,11 +147,12 @@
                         </div>
                     </div>
                     <div class="project-item">
-                        <div class="project-header">Project 6</div>
-                        <div class="project-text">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
-                             enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
-                              at nunc elit. Aliquam hendrerit varius ipsum quis placerat.</div>
+                        <div class="project-header">Project X</div>
+                        <div class="project-text">Nullam quam metus, bibendum id orci in,
+                             bibendum finibus arcu. Cras mi urna, bibendum sit amet cursus
+                              in, condimentum id urna. Phasellus eu pretium elit,
+                               vulputate luctus ante. Ut porttitor sodales lobortis. Ut
+                                eget nulla nec metus mollis efficitur ut non enim.</div>
                         <div class="project-links">
                             <img src="icons/favorite.svg" alt="Favorite icon">
                             <img src="icons/bookmark.svg" alt="Bookmark icon">
@@ -164,21 +166,19 @@
                 <div class="announce-main">
                     <div class="announce-item">
                         <div class="announce-header">Announcement 1</div>
-                        <div class="announce-text">Donec at nunc elit. Aliquam hendrerit
-                             varius ipsum quis placerat. Duis ut ligula fringilla, 
-                             volutpat metus eget, pharetra magna.</div>
+                        <div class="announce-text">Nunc egestas faucibus orci vel porta.
+                             Ut sit amet erat sit amet erat placerat pulvinar vehicula at
+                              sapien. Praesent vitae bibendum nunc...</div>
                     </div>
                     <div class="announce-item-middle">
                         <div class="announce-header">Announcement 2</div>
-                        <div class="announce-text">Donec at nunc elit. Aliquam hendrerit
-                            varius ipsum quis placerat. Duis ut ligula fringilla, 
-                            volutpat metus eget, pharetra magna.</div>
+                        <div class="announce-text">Quisque arcu ante, mattis rutrum magna
+                             nec, pellentesque accumsan nisi. Praesent in dui nisi...</div>
                     </div>
                     <div class="announce-item">
                         <div class="announce-header">Announcement 3</div>
-                        <div class="announce-text">Donec at nunc elit. Aliquam hendrerit
-                            varius ipsum quis placerat. Duis ut ligula fringilla, 
-                            volutpat metus eget, pharetra magna.</div>
+                        <div class="announce-text">Proin faucibus dapibus suscipit. Nunc
+                             quis eros pretium, tincidunt quam id, efficitur libero...</div>
                     </div>
                 </div>
             </div>
